# LCSFE

./: Cargo.toml  README.md
crates/lcsfe-algorithm/: Cargo.toml
crates/lcsfe-algorithm/src/: normalizer.rs  parser.rs  powerset_game.rs
crates/lcsfe-cli/: Cargo.toml
crates/lcsfe-cli/src/: main.rs
crates/lcsfe-common/: Cargo.toml
crates/lcsfe-common/src/: cli_io.rs  lib.rs
crates/lcsfe-mu-ald/: Cargo.toml
crates/lcsfe-mu-ald/src/: ald_parser.rs  lib.rs  mu_calc_parser.rs
crates/lcsfe-pg/: Cargo.toml
crates/lcsfe-pg/src/: lib.rs  pg_to_system.rs
crates/sem-lmc-algorithm/: Cargo.toml
crates/sem-lmc-algorithm/src/: ast.rs  lib.rs  moves_compositor.rs  normalizer.rs  parity_game.rs  parser.rs
crates/sem-lmc-cli/: Cargo.toml
crates/sem-lmc-cli/src/: main.rs
crates/sem-lmc-common/: Cargo.toml
crates/sem-lmc-common/src/: cli_io.rs  lib.rs
crates/sem-lmc-pg/: Cargo.toml
crates/sem-lmc-pg/src/: lib.rs  parser.rs  pg.rs  pg_to_pbe.rs
crates/sem-sfe-algorithm/: Cargo.toml
crates/sem-sfe-algorithm/src/: ast.rs  lib.rs  normalizer.rs  parity_game.rs  parser.rs  powerset_game.rs
crates/sem-sfe-algorithm/src/ast/: fixpoint_system.rs  symbolic_exists_moves.rs  symbolic_moves_composed.rs  symbolic_moves_dag.rs
crates/sem-sfe-algorithm/src/moves_compositor/: compose_moves.rs  simplify.rs
crates/sem-sfe-algorithm/src/parity_game/: play_data.rs  position.rs  position_counter_set.rs
crates/sem-sfe-algorithm/src/parser/: arity_parser.rs  basis_parser.rs  eq_system_parser.rs  moves_parser.rs
crates/sem-sfe-algorithm/src/powerset_game/: position_counter_set.rs
crates/sem-sfe-cli/: Cargo.toml
crates/sem-sfe-cli/src/: main.rs
crates/sem-sfe-common/: Cargo.toml
crates/sem-sfe-mu-ald/: Cargo.toml
crates/sem-sfe-mu-ald/src/: ald_parser.rs  lib.rs  mu_calc_parser.rs
crates/sem-sfe-pg/: Cargo.toml
crates/sem-sfe-pg/src/: lib.rs  parser.rs  pg_to_pbe.rs  pg_to_system.rs
doc/: comparison_and_benchmarks.md  default.yaml  defaults.yaml  examples.md  installation_and_usage.md  metadata.yaml  mu-ald-module.md  mu_ald_module.md  pg-module.md  pg_module.md  project-structure.md  project_structure.md  references.bib
src/: main.rs  parity_game.rs  parser.rs
src/moves_compositor/: compose_moves.rs  simplify.rs
src/parity_game/: counter.rs  mod.rs  parity_game.rs  play_data.rs  player.rs  playlist.rs  position.rs  position_counter_set.rs
src/parser/: arity_parser.rs  eq_system_parser.rs  fixpoint_system.rs  mod.rs  moves_parser.rs  symbolic_exists_moves.rs
tests/example_01/: arity  basis  fix_system  symbolic
tests/example_mucalc/: bridge-referee.aut  deadlock  deadlock-liveness  gossips_known_after_7_steps  receive-17
tests/normalized-system/: arity  fix_system  symbolic
tests/parity_games/: test_02.gm  test_03.gm  test_04.gm  test_05.gm
(+14 files in other folders)
