[package]
name = "lcsfe-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcsfe-pg =        { path = "../lcsfe-pg" }
lcsfe-mu-ald =        { path = "../lcsfe-mu-ald" }
lcsfe-common =    { path = "../lcsfe-common" }
lcsfe-algorithm = { path = "../lcsfe-algorithm" }
clap = { version = "4.0", features = ["derive"] }
rustc-hash = "1.1.0"
