[package]
name = "sem-lmc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sem-lmc-pg = { path = "../sem-lmc-pg" }
sem-lmc-common = { path = "../sem-lmc-common" }
clap = { version = "4.0", features = ["derive"] }