[package]
name = "sem-sfe-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
itertools = "0.11.0"
rustc-hash = "1.1.0"
bimap = { version = "0.6.3", default-features = false }
hashable_rc = "0.2.1"
