[package]
name = "sem-sfe-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sem-sfe-pg =        { path = "../sem-sfe-pg" }
sem-sfe-mu-ald =        { path = "../sem-sfe-mu-ald" }
sem-sfe-common =    { path = "../sem-sfe-common" }
sem-sfe-algorithm = { path = "../sem-sfe-algorithm" }
clap = { version = "4.0", features = ["derive"] }
