[package]
name = "sem-sfe-mu-ald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sem-sfe-common =    { path = "../sem-sfe-common" }
sem-sfe-algorithm = { path = "../sem-sfe-algorithm" }
chumsky = "0.9.2"
regex = "1.10.2"